--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "nodemon server/index.ts",
     "stripe": "stripe listen --forward-to localhost:8000/api/v1/order/web",
     "build": "npm install && npm install --prefix client && npm run build --prefix client",
-    "start": "nodemon server/index.ts",
+    "start": "node --max-old-space-size=1024 server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "type": "module"
   },
