--- a/package.json
+++ b/package.json
@@ -2,20 +2,19 @@
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": "nodemon server/index.ts",
     "stripe": "stripe listen --forward-to localhost:8000/api/v1/order/web",
     "build": "npm install && npm install --prefix client && npm run build --prefix client",
-    "start": "node --max-old-space-size=1024 server/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "type": "module"
+    "start": "nodemon server/index.ts",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "18": "^0.0.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.4.0",
     "cookie-parser": "^1.4.6",
