--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "module",
+
   "scripts": {
     "dev": "nodemon server/index.ts",
     "stripe": "stripe listen --forword-to localhost:8000/api/v1/order/webhook",
     "build": "npm install && npm install --prefix client && npm run build --prefix client",
-    "start": "NODE_OPTIONS=--max-old-space-size=4096 nodemon server/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon server/index.ts"
   },
   "keywords": [],
   "author": "",
